Added image uploaded, renamed IdExistsAndEqual to IdExistsAndCompare, now by passing ps = nil to IdExistsAndCompare it will just check if the id exists.
